# mcp-agenticdbg

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DOCKER_MCP_SETUP.md  IMPROVEMENTS.md  LICENSE  QUICKSTART_GDB.md  README.md  SECURITY.md  pyproject.toml  test_pr_template.py
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/prompts/: dump-triage.prompt.md
.github/workflows/: ci.yml  dco.yml
docs/: TROUBLESHOOTING.md
examples/: README.md  build.ps1  build.sh  crashdump.h  gdb_triage_demo.py  gen_core_mac.sh  heap-corruption.cpp  heap-metadata-corruption.cpp  lldb_triage_demo.py  run-all.ps1  stack-buffer-overrun.cpp  use-after-free.cpp  vtable-corruption.cpp
examples/common/: crashdump.h  deep-callchain-nullptr.cpp  double-free.cpp  multi-inheritance-crash.cpp  stack-buffer-overrun.cpp  stack-overflow.cpp  thread-uaf.cpp  vtable-corruption.cpp
examples/linux/: README.md  build.sh  gdb_triage_demo.py
examples/macos/: README.md  build.sh  gen_core_mac.sh  lldb_triage_demo.py
examples/windows/: README.md  build.ps1  cdb_triage_demo.py  run-all.ps1
src/triagepilot/: __init__.py  __main__.py  cdb_session.py  config.py  logging_config.py  server.py
src/triagepilot/backends/: __init__.py  base.py  cdb.py  gdb.py  lldb.py
src/triagepilot/graph/: __init__.py  edges.py  graph.py  nodes.py  state.py
src/triagepilot/memory/: __init__.py  models.py  signature.py  similarity.py  store.py  tools.py
src/triagepilot/prompts/: __init__.py  dump-triage.prompt.md
src/triagepilot/tests/: __init__.py  test_backends.py  test_cdb_session.py  test_config.py  test_gdb_mi_parser.py  test_git_tools.py  test_helpers.py
src/triagepilot/tools/: __init__.py  debugger_tools.py  git_tools.py  windbg_tools.py
tests/: test_backends.py  test_cdb_session.py  test_config.py  test_gdb_mi_parser.py  test_git_tools.py  test_helpers.py  test_memory.py  test_session_and_break.py
