[project]
name = "triagepilot"
version = "1.0.0"
description = "MCP server supporting CDB (Windows), GDB (Linux), and LLDB (macOS)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.17.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.9.0",
    "structlog>=25.1.0",
]

[project.optional-dependencies]
langgraph = [
    "langgraph>=0.4.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
]

[project.scripts]
triagepilot = "triagepilot:main"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
triagepilot = ["prompts/*.prompt.md"]

[dependency-groups]
dev = ["pytest>=8.4.0"]

[tool.pytest.ini_options]
testpaths = ["src/triagepilot/tests"]
