[project]
name = "triagepilot"
version = "1.0.0"
description = "MCP server supporting CDB (Windows), GDB (Linux), and LLDB (macOS)"
readme = "README.md"
requires-python = ">=3.10"  # 3.11+ recommended; 3.10 supported
dependencies = [
    "mcp>=1.17.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.9.0",
    "structlog>=25.1.0",
]

[project.optional-dependencies]
langgraph = [
    "langgraph>=0.4.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
]

[project.scripts]
triagepilot = "triagepilot:main"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
triagepilot = ["prompts/*.prompt.md"]

[dependency-groups]
dev = ["pytest>=8.4.0", "ruff>=0.9.0", "mypy>=1.14.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B904",   # raise from within except (too noisy for existing code)
    "SIM105", # contextlib.suppress (less readable than try/except/pass)
    "SIM108", # ternary operator (readability preference)
    "B905",   # zip strict (not needed for internal iteration)
]

[tool.ruff.lint.isort]
known-first-party = ["triagepilot"]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "triagepilot.graph.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "triagepilot.backends.cdb"
ignore_errors = true
